--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
       <div class="plus">+</div>
     </div>
 
-    <div class="card" style="background-color: #045762;">
+    <div class="card" style="background-color: #005F73;">
       <div class="icon">🌐</div>
       <h3>Web</h3>
       <div class="plus">+</div>
     </div>
 
-    <div class="card" style="background-color: #A03B2E;">
+    <div class="card" style="background-color: #AE2012;">
       <div class="icon">🐍</div>
       <h3>Python</h3>
       <div class="plus">+</div>
     </div>
 
-    <div class="card" style="background-color: #D27347;">
+    <div class="card" style="background-color: #AE2012;">
       <div class="icon">📊</div>
       <h3>Dashboards</h3>
       <div class="plus">+</div>
@@ -53,7 +53,7 @@
       <div class="plus">+</div>
     </div>
 
-    <div class="card" style="background-color: #E9DCC9;">
+    <div class="card" style="background-color: #E9D8A6;">
       <div class="icon">🔗</div>
       <h3>Links</h3>
       <div class="plus">+</div>
