--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main class="grid">
     <div class="card" style="background-color: #FCE5D8;">
       <div class="icon">
-        <img src="https://via.placeholder.com/60" alt="About Icon">
+        <img src="woman.png" alt="About Icon">
       </div>
       <h3>About</h3>
       <div class="plus">+</div>
