--- a/index.html
+++ b/index.html
@@ -24,37 +24,49 @@
     </div>
 
     <div class="card" style="background-color: #9ED2C6;">
-      <div class="icon">📒</div>
+      <div class="icon">
+        <img src="books.png" alt="About Icon">
+      </div>
       <h3>Data Analysis Projects</h3>
       <div class="plus">+</div>
     </div>
 
     <div class="card" style="background-color: #005F73;">
-      <div class="icon">🌐</div>
+      <div class="icon">
+        <img src="web.png" alt="About Icon">
+      </div>
       <h3>Web</h3>
       <div class="plus">+</div>
     </div>
 
     <div class="card" style="background-color: #AE2012;">
-      <div class="icon">🐍</div>
+      <div class="icon">
+        <img src="snake.png" alt="About Icon">
+      </div>
       <h3>Python</h3>
       <div class="plus">+</div>
     </div>
 
     <div class="card" style="background-color: #EE9B00;">
-      <div class="icon">📊</div>
+      <div class="icon">
+        <img src="dashboard.png" alt="About Icon">
+      </div>
       <h3>Dashboards</h3>
       <div class="plus">+</div>
     </div>
 
     <div class="card" style="background-color: #E4BBA9;">
-      <div class="icon">✨</div>
+      <div class="icon">
+        <img src="sparkle.png" alt="About Icon">
+      </div>
       <h3>Pyspark</h3>
       <div class="plus">+</div>
     </div>
 
     <div class="card" style="background-color: #E9D8A6;">
-      <div class="icon">🔗</div>
+      <div class="icon">
+        <img src="links.png" alt="About Icon">
+      </div>
       <h3>Links</h3>
       <div class="plus">+</div>
     </div>
