--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="card" style="background-color: #9ED2C6;">
       <div class="icon">
-        <img src="books.png" alt="About Icon">
+        <img src="stack-of-books.png" alt="About Icon">
       </div>
       <h3>Data Analysis Projects</h3>
       <div class="plus">+</div>
@@ -33,7 +33,7 @@
 
     <div class="card" style="background-color: #005F73;">
       <div class="icon">
-        <img src="web.png" alt="About Icon">
+        <img src="internet.png" alt="About Icon">
       </div>
       <h3>Web</h3>
       <div class="plus">+</div>
@@ -57,7 +57,7 @@
 
     <div class="card" style="background-color: #E4BBA9;">
       <div class="icon">
-        <img src="sparkle.png" alt="About Icon">
+        <img src="sparkling.png" alt="About Icon">
       </div>
       <h3>Pyspark</h3>
       <div class="plus">+</div>
@@ -65,7 +65,7 @@
 
     <div class="card" style="background-color: #E9D8A6;">
       <div class="icon">
-        <img src="links.png" alt="About Icon">
+        <img src="link.png" alt="About Icon">
       </div>
       <h3>Links</h3>
       <div class="plus">+</div>
